[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuke-nodes"
version = "1.0.0"
description = "ComfyUI custom nodes that replicate Nuke compositing functionality"
authors = [
    {name = "Nuke Nodes Team"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0"
]
keywords = ["ComfyUI", "nodes", "compositing", "Nuke", "image processing"]

[project.urls]
Homepage = "https://github.com/your-username/nuke-nodes"
Documentation = "https://github.com/your-username/nuke-nodes/blob/main/docs/"
Repository = "https://github.com/your-username/nuke-nodes"
"Bug Reports" = "https://github.com/your-username/nuke-nodes/issues"
Changelog = "https://github.com/your-username/nuke-nodes/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: Due to relative imports in the package, run tests from the tests directory:
# cd tests && python -m pytest test_colorspace_nodes.py -v --rootdir=.
# Or run directly with Python: cd tests && python test_colorspace_nodes.py
